--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
@@ -30,11 +30,11 @@
 		}
 
 		//Snacks masses 0.001 metric tons per unit
-		//1 Ore = 10 Snacks
+		//1 Ore = 5 Snacks
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Snacks
-			Ratio = 0.002
+			Ratio = 0.001
 			DumpExcess = false
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
@@ -66,7 +66,7 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Soil
-			Ratio = 0.0002
+			Ratio = 1
 			FlowMode = ALL_VESSEL
   		}
 
@@ -79,7 +79,7 @@
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Snacks
-			Ratio = 0.0002
+			Ratio = 0.000555556
 			DumpExcess = false
 			FlowMode = ALL_VESSEL
 		}
@@ -118,7 +118,7 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Soil
-			Ratio = 0.0002
+			Ratio = 1
 			FlowMode = ALL_VESSEL
   		}
 
@@ -131,7 +131,7 @@
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Snacks
-			Ratio = 0.0002
+			Ratio = 0.0002777778
 			DumpExcess = false
 			FlowMode = ALL_VESSEL
 		}
