--- a/GameData/WildBlueIndustries/Pathfinder/ExperimentData.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ExperimentData.cfg
@@ -1,4 +1,10 @@
-﻿RESOURCE_DEFINITION
+﻿WBICONTRACTSETTINGS
+{
+	//Station research contracts require a return to the homeworld. These experiments are excluded.
+	ignoreReturnToHome = WBISoilAnalysis;WBIMetallurgyAnalysis;WBIChemicalAnalysis;WBIExtractionAnalysis
+}
+
+RESOURCE_DEFINITION
 {
 	name = CoreSamples
 	density = 0.00001
