--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -215,20 +215,27 @@
 		criticalSuccess = 90
 		criticalFail = 20
 		cropResource = Snacks
-		cropYield = 270 //You'll have enough to feed 3 kerbals for 90 days
+
+		//Calibrated for standard 1 snack per meal, 3 meals per day
+		//Supports 3 kerbals
+		cropYield = 810
+
 		criticalSuccessBonus = 0.25
 		failureLoss = 0.5
+		repairSkill = ScienceSkill
+		repairResource = RocketParts
+		repairAmount = 50
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.0002
+			Ratio = 0.000328125
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.00002
+			Ratio = 0.000109375
 		}
 
 		INPUT_RESOURCE
@@ -246,218 +253,16 @@
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 350
-		maxAmount = 350
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = true
 	}
 
 	RESOURCE
 	{
 		name = Water
-		amount = 350
-		maxAmount = 350
-		isTweakable = true
-	}
-}
-
-@PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,TacLifeSuport]
-{
-	!MODULE[PlanetaryGreenhouse]{}
-
-	MODULE
-	{
-		name = WBIGreenhouse
-		ConverterName = Greenhouse
-		StartActionName = Start Grenhouse
-		StopActionName = Stop Greenhouse
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		ExperienceEffect = ScienceSkill
-		EfficiencyBonus = 1
-		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
-		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Food
-		cropYield = 51 //You'll have enough to feed 3 kerbals for 90 days
-		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 7
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = CarbonDioxide
-			Ratio = 0.00014
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 0.00000357
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 0.000001
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = WasteWater
-			Ratio = 0.000001
-			DumpExcess = true
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Oxygen
-			Ratio = 0.000115
-			DumpExcess = true
-		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 100
-		}
-
-	}
-
-	RESOURCE
-	{
-		name = Oxygen
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = CarbonDioxide
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Water
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = WasteWater
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Food
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Fertilizer
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-}
-
-@PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,USILifeSupport]
-{
-	!MODULE[PlanetaryGreenhouse]{}
-
-	MODULE
-	{
-		name = WBIGreenhouse
-		ConverterName = Greenhouse
-		StartActionName = Start Grenhouse
-		StopActionName = Stop Greenhouse
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		ExperienceEffect = ScienceSkill
-		EfficiencyBonus = 1
-		hoursPerCycle = 540 //90 * 6 Number of hours to grow crops
-		minimumSuccess = 45
-		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Supplies
-		cropYield = 2916 //10.8 per day * 90 * 3
-		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 0.0002
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 0.0002
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 6
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio = 0.00001
-		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio = 100
-		}
-
-	}
-
-	RESOURCE
-	{
-		name = Water
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Fertilizer
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Supplies
-		amount = 500
-		maxAmount = 500
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = true
 	}
 }
