--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -41,6 +41,52 @@
 		}
 	}
 
+	MODULE
+	{
+		name = SoilRecycler
+		ConverterName = Soil Recycler
+		StartActionName = Start Soil Recycler
+		StopActionName = Stop Soil Recycler
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		UseSpecializationBonus = true
+		SpecialistEfficiencyFactor = 0.1
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1.0
+		RecyclerCapacity = 6
+	 
+		INPUT_RESOURCE
+		{
+			ResourceName = Soil
+			Ratio = 1
+			FlowMode = ALL_VESSEL
+  		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 15
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.000625
+			DumpExcess = false
+			FlowMode = ALL_VESSEL
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.000208333
+			DumpExcess = false
+			FlowMode = ALL_VESSEL
+		}
+	}
+
 	RESOURCE
 	{
 		name = Ore
@@ -65,6 +111,13 @@
 		isTweakable = false
 	}
 
+	RESOURCE
+	{
+		name = Soil
+		amount = 500
+		maxAmount = 500
+		isTweakable = false
+	}
 }
 
 @GREENHOUSE[Prairie]:NEEDS[SnacksUtils]
@@ -102,19 +155,13 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.000104167
+			Ratio = 0.000328125
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.000104167
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Soil
-			Ratio = 0.0004167
+			Ratio = 0.000109375
 		}
 
 		INPUT_RESOURCE
@@ -138,14 +185,6 @@
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Soil
-		amount = 1000
-		maxAmount = 1000
-		isTweakable = false
 	}
 }
 
@@ -184,31 +223,19 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.00034722
+			Ratio = 0.001093750
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.00034722
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Soil
-			Ratio = 0.00138889
+			Ratio = 0.000364583
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
 			Ratio = 12
-		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 337.5
 		}
 	}
 
@@ -226,14 +253,6 @@
 		amount = 4000
 		maxAmount = 4000
 		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Soil
-		amount = 4000
-		maxAmount = 4000
-		isTweakable = false
 	}
 }
 
