--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
@@ -119,9 +119,11 @@
 
 @GREENHOUSE[Prairie]:NEEDS[TacLifeSupport]
 {
+	@description = The Prairie produces Continually Regenerating Agricultural Product - food if supplied with the right nutrients. Apparently the agricultural product tastes like wood.
+
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = ModuleResourceConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
@@ -131,22 +133,11 @@
 		SpecialistEfficiencyFactor = 0.2
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
-		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
-		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Food
-		cropYield = 125 //You'll have enough to feed 3 kerbals for 90 days
-		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = RocketParts
-		repairAmount = 50
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 7
+			Ratio = 15
 		}
 
 		INPUT_RESOURCE
@@ -179,6 +170,12 @@
 			ResourceName = Oxygen
 			Ratio = 0.000115
 			DumpExcess = true
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Food
+			Ratio = 0.00014
 		}
 	}
 
@@ -359,7 +356,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 {
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = ModuleResourceConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
@@ -369,54 +366,49 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 		SpecialistEfficiencyFactor = 0.2
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
-		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
-		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Food
-		cropYield = 437.5 //You'll have enough to feed 3 kerbals for 90 days
-		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = RocketParts
-		repairAmount = 150
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 12
+			Ratio = 15
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = CarbonDioxide
-			Ratio = 0.00028
+			Ratio = 0.00042
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.00000714
+			Ratio = 0.00001071
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Waste
-			Ratio = 0.000002
+			Ratio = 0.000003
 		}
 
 		OUTPUT_RESOURCE
 		{
 			ResourceName = WasteWater
-			Ratio = 0.000002
+			Ratio = 0.000003
 			DumpExcess = true
 		}
 
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Oxygen
-			Ratio = 0.000230
+			Ratio = 0.000345
 			DumpExcess = true
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Food
+			Ratio = 0.00042
 		}
 	}
 
