--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -145,66 +145,49 @@
 
 @GREENHOUSE[Prairie]:NEEDS[USILifeSupport]
 {
+	@description = The Prairie produces Continually Regenerating Agricultural Product - Supplies if provided the right nutrients. Apparently the agricultural product tastes like wood.
+
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = ModuleResourceConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.05
-		SpecialistBonusBase = 0.05
+		SpecialistEfficiencyFactor = 0.2
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
-		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
-		criticalSuccess = 95
-		criticalFail = 20
-		cropResource = Supplies
-		cropYield = 2916 //You'll have enough to feed 3 kerbals for 90 days, 10.8 Supplies per day.
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = RocketParts
-		repairAmount = 50
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 0.000375
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 0.00045
+			ResourceName = ElectricCharge
+			Ratio = 5
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Mulch
-			Ratio = 0.0018
+			Ratio = 0.0024
 		}
 
 		INPUT_RESOURCE
 		{
-			ResourceName = ElectricCharge
-			Ratio = 6
+			ResourceName = Fertilizer
+			Ratio = 0.0024
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Supplies
+			Ratio = 0.00264
 		}
 	}
 
 	RESOURCE
 	{
 		name = Mulch
-		amount = 1000
-		maxAmount = 1000
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Dirt
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
@@ -313,71 +296,45 @@ GREENHOUSE:NEEDS[USILifeSupport]
 {
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = ModuleResourceConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.05
-		SpecialistBonusBase = 0.05
+		SpecialistEfficiencyFactor = 0.2
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
-		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
-		criticalSuccess = 95
-		criticalFail = 20
-		cropResource = Supplies
-		cropYield = 8748 //You'll have enough to feed 9 kerbals for 90 days, 10.8 Supplies per day.
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = RocketParts
-		repairAmount = 150
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 0.001125
+			ResourceName = ElectricCharge
+			Ratio = 5
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Mulch
+			Ratio = 0.0025
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.00135
+			Ratio = 0.0025
 		}
 
-		INPUT_RESOURCE
+		OUTPUT_RESOURCE
 		{
-			ResourceName = ElectricCharge
-			Ratio = 12
+			ResourceName = Supplies
+			Ratio = 0.005
 		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio = 0.0054
-		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio = 250
-		}
-
 	}
 
 	RESOURCE
 	{
 		name = Mulch
-		amount = 1000
-		maxAmount = 1000
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Dirt
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
