--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
@@ -48,7 +48,7 @@ BUCKBOARD_GENERATOR2
 	mass = 0.6
 	requiredResource = Equipment
 	requiredAmount = 60
-	reconfigureSkill = Engineer
+	reconfigureSkill = ConverterSkill
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/Generator
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/Generator
 	toolTip = This diesel-electric generator is powered by ore.
@@ -71,7 +71,7 @@ BUCKBOARD_GENERATOR2
 		TemperatureModifier = 60
 		UseSpecializationBonus = true
 		SpecialistEfficiencyFactor = 0.1
-		Specialty = Engineer
+		Specialty = ConverterSkill
 		EfficiencyBonus = 1.0
 
 		hoursPerCycle = 180 //30 days
@@ -79,8 +79,8 @@ BUCKBOARD_GENERATOR2
 		criticalSuccess = 95
 		criticalFail = 15 //If the generator suffers a critical failure then it will break down and stop generating power.
 		criticalFailModifier = 2 //Each time the generator fails its power check, the critical fail goes up by this number.
-		repairSkill = Engineer
-		repairResource = RocketParts
+		repairSkill = RepairSkill
+		repairResource = Equipment
 		repairAmount = 25
 		showGUI = true
 		efficiencyType = industry
@@ -160,7 +160,7 @@ BUCKBOARD_GENERATOR3
 	mass = 0.85
 	requiredResource = Equipment
 	requiredAmount = 100
-	reconfigureSkill = Engineer
+	reconfigureSkill = ConverterSkill
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/Generator
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/Generator
 	toolTip = This diesel-electric generator is powered by ore.
@@ -183,7 +183,7 @@ BUCKBOARD_GENERATOR3
 		TemperatureModifier = 60
 		UseSpecializationBonus = true
 		SpecialistEfficiencyFactor = 0.1
-		Specialty = Engineer
+		Specialty = ConverterSkill
 		EfficiencyBonus = 1.0
 
 		hoursPerCycle = 180 //30 days
@@ -191,8 +191,8 @@ BUCKBOARD_GENERATOR3
 		criticalSuccess = 95
 		criticalFail = 15 //If the generator suffers a critical failure then it will break down and stop generating power.
 		criticalFailModifier = 2 //Each time the generator fails its power check, the critical fail goes up by this number.
-		repairSkill = Engineer
-		repairResource = RocketParts
+		repairSkill = RepairSkill
+		repairResource = Equipment
 		repairAmount = 25
 		showGUI = true
 		efficiencyType = industry
