--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/Terrain.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/Terrain.cfg
@@ -87,7 +87,7 @@ PART
 		criticalFail = 20
 		sciencePerCycle = 0.25
 		repairSkill = ScienceSkill
-		repairResource = RocketParts
+		repairResource = Equipment
 		repairAmount = 20
 
 		INPUT_RESOURCE
