--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
@@ -36,6 +36,7 @@ PATH_SCIENCE
 		interactionRange = 1.2
 		rerunnable = False
 		resettable = False
+		resettableOnEVA = False
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
@@ -55,6 +56,7 @@ PATH_SCIENCE
 		interactionRange = 1.2
 		rerunnable = False
 		resettable = False
+		resettableOnEVA = False
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
@@ -74,6 +76,7 @@ PATH_SCIENCE
 		interactionRange = 1.2
 		rerunnable = False
 		resettable = False
+		resettableOnEVA = False
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
@@ -93,6 +96,7 @@ PATH_SCIENCE
 		interactionRange = 1.2
 		rerunnable = False
 		resettable = False
+		resettableOnEVA = False
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
