--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -51,16 +51,6 @@ PATH_HABITATION
 		}
 	}
 
-	//Gives you the ability to go prospecting for rich deposits.
-	MODULE
-	{
-		name = WBIGoldStrike
-		showDebugLog = true
-		showGUI = false
-		prospectChance = 30
-		lodeStrikeSound = WildBlueIndustries/Pathfinder/Sounds/wereInTheMoney
-	}
-
 	MODULE
 	{
 		name = WBIModuleScienceExperiment
@@ -76,6 +66,7 @@ PATH_HABITATION
 		interactionRange = 1.2
 		rerunnable = False
 		resettable = False
+		resettableOnEVA = False
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
@@ -95,6 +86,7 @@ PATH_HABITATION
 		interactionRange = 1.2
 		rerunnable = False
 		resettable = False
+		resettableOnEVA = False
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
@@ -161,6 +153,7 @@ PATH_HABITATION
 		name = WBIPathfinderLab
 	}
 
+	//Separates the biome's resources from Ore.
 	MODULE
 	{
 		name = WBIProspector
