--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/HotSprings.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/HotSprings.cfg
@@ -40,7 +40,7 @@ HOTSPRINGS
 		criticalFail = 20 //If the plant suffers a critical failure then it will break down and stop generating power.
 		criticalFailModifier = 2 //Each time the plant fails is power check, the critical fail goes up by this number.
 		repairSkill = ConverterSkill
-		repairResource = RocketParts
+		repairResource = Equipment
 		repairAmount = 500
 		showGUI = false
 		efficiencyType = industry
