--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/OPAL.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/OPAL.cfg
@@ -18,9 +18,9 @@ PATH_HABITATION
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Greenhouse
-		StartActionName = Start Grenhouse
-		StopActionName = Stop Greenhouse
+		ConverterName = OPAL
+		StartActionName = Start OPAL
+		StopActionName = Stop OPAL
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
@@ -41,7 +41,7 @@ PATH_HABITATION
 			Ratio = 0.0014
 		}
 
-		INPUT_RESOURCE
+		OUTPUT_RESOURCE
 		{
 			ResourceName = Water
 			Ratio = 0.000357
