--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SolarFlare.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SolarFlare.cfg
@@ -34,7 +34,7 @@ PATH_INDUSTRY
 		criticalFail = 25 //If the plant suffers a critical failure then it will break down and stop generating power.
 		criticalFailModifier = 4 //Each time the plant fails is power check, the critical fail goes up by this number.
 		repairSkill = Engineer
-		repairResource = RocketParts
+		repairResource = Equipment
 		repairAmount = 600
 		showGUI = false
 		efficiencyType = industry
