--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/WatneyChemLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/WatneyChemLab.cfg
@@ -95,48 +95,7 @@ PATH_SCIENCE
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Rainmaker (LFO)
-		StartActionName = Start Create Water
-		StopActionName = Stop Create Water
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ScienceSkill
-		EfficiencyBonus = 1
-		 
-		INPUT_RESOURCE
-		{
-			ResourceName = LiquidFuel
-			Ratio = 0.45
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Oxidizer
-			Ratio = 0.55
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 1.5
-			DumpExcess = true
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 1.0
-			DumpExcess = false
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Fuel Cell (LFO)
+		ConverterName = Fuel Cell
 		StartActionName = Start Fuel Cell
 		StopActionName = Stop Fuel Cell
 		AutoShutdown = false
@@ -150,13 +109,49 @@ PATH_SCIENCE
 		INPUT_RESOURCE
 		{
 			ResourceName = LiquidFuel
-			Ratio = 0.02025
+			Ratio = 0.0405
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Oxidizer
-			Ratio = 0.02475
+			Ratio = 0.0494
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 36
+			DumpExcess = false
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.45
+			DumpExcess = true
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Auxiliary Generator
+		StartActionName = Start Generator
+		StopActionName = Stop Generator
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = Ore
+			Ratio = 0.01
+			FlowMode = STAGE_PRIORITY_FLOW
 		}
 
 		OUTPUT_RESOURCE
@@ -165,13 +160,11 @@ PATH_SCIENCE
 			Ratio = 18
 			DumpExcess = false
 		}
+	}
 
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 0.225
-			DumpExcess = true
-		}
+	MODULE
+	{
+		name = WBIPowerMonitor
 	}
 
 	//Mole = 6 x 10^23
