--- a/GameData/WildBlueIndustries/Pathfinder/ExperimentData.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ExperimentData.cfg
@@ -58,6 +58,7 @@ EXPERIMENT_DEFINITION
 	requireAtmosphere = False
 	situationMask = 1
 	biomeMask = 1
+	techRequired = spaceExploration
 
 	//WBIModuleScienceExperiment specific fields
 
@@ -110,6 +111,7 @@ EXPERIMENT_DEFINITION
 	requireAtmosphere = False
 	situationMask = 1
 	biomeMask = 1
+	techRequired = specializedConstruction
 
 	//WBIModuleScienceExperiment specific fields
 
@@ -162,6 +164,7 @@ EXPERIMENT_DEFINITION
 	requireAtmosphere = False
 	situationMask = 1
 	biomeMask = 1
+	techRequired = advExploration
 
 	//WBIModuleScienceExperiment specific fields
 
@@ -214,6 +217,7 @@ EXPERIMENT_DEFINITION
 	requireAtmosphere = False
 	situationMask = 1
 	biomeMask = 1
+	techRequired = specializedConstruction
 
 	//WBIModuleScienceExperiment specific fields
 
