--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Claimjumper.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Claimjumper.cfg
@@ -25,9 +25,9 @@ PATH_INDUSTRY
 	MODULE
 	{
 		name = WBIProspector
-		ConverterName = Separator
-		StartActionName = Start Separator
-		StopActionName = Stop Separator
+		ConverterName = Prospector
+		StartActionName = Start Prospector
+		StopActionName = Stop Prospector
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
