--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Ironworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Ironworks.cfg
@@ -84,4 +84,21 @@ PATH_INDUSTRY
 		maxAmount = 1000
 		isTweakable = true
 	}
+
+	RESOURCE
+	{
+		name = RareMetals
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = ExoticMinerals
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
 }
