--- a/GameData/WildBlueIndustries/Buffalo/Parts/Control/BuffaloSAS.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Control/BuffaloSAS.cfg
@@ -13,7 +13,7 @@ PART
 	node_stack_back = 0, 0, -0.105, 0, 0, -1, 1
 	node_stack_btmfront = 0, -0.7840558, 0.105, 0, 0, 1, 1
 
-	TechRequired = advScienceTech
+	TechRequired = advFlightControl
 	entryCost = 6000
 	cost = 3600
 	category = Utility
