--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
@@ -1,4 +1,4 @@
-@PATH_INDUSTRY[Ironworks]:NEEDS[ExtraplanetaryLaunchpads]
+@PATH_INDUSTRY[Ironworks]:NEEDS[Launchpad]
 {
 	MODULE
 	{
@@ -191,34 +191,34 @@
 	}
 }
 
-@PART[WBI_DocSciLab]:NEEDS[ExtraplanetaryLaunchpads]
+@PART[WBI_DocSciLab]:NEEDS[Launchpad]
 {
 	MODULE
 	{
 		name = ExWorkshop
-		ProductivityFactor = 2
+		ProductivityFactor = 0.2
 	}
 }
 
-@PART[WBI_Ponderosa]:NEEDS[ExtraplanetaryLaunchpads]
+@PART[WBI_Ponderosa]:NEEDS[Launchpad]
 {
 	MODULE
 	{
 		name = ExWorkshop
-		ProductivityFactor = 3
+		ProductivityFactor = 0.3
 	}
 }
 
-@PART[WBI_Ponderosa2]:NEEDS[ExtraplanetaryLaunchpads]
+@PART[WBI_Ponderosa2]:NEEDS[Launchpad]
 {
 	MODULE
 	{
 		name = ExWorkshop
-		ProductivityFactor = 3
+		ProductivityFactor = 0.3
 	}
 }
 
-@PART[WBI_Hacienda]:NEEDS[ExtraplanetaryLaunchpads]
+@PART[WBI_Hacienda]:NEEDS[Launchpad]
 {
 	MODULE
 	{
@@ -227,7 +227,7 @@
 	}
 }
 
-@PART[WBI_Homestead]:NEEDS[ExtraplanetaryLaunchpads]
+@PART[WBI_Homestead]:NEEDS[Launchpad]
 {
 	MODULE
 	{
