--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -197,6 +197,11 @@ PART
 		name = FlightEngineerModule
 	}
 
+	MODULE
+	{
+		name = WBIAirParkController
+	}
+
 	RESOURCE
 	{
 		name = ElectricCharge
