--- a/GameData/WildBlueIndustries/Buffalo/Parts/JetWing/Jetwing.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/JetWing/Jetwing.cfg
@@ -40,6 +40,7 @@ PART
 	maxTemp = 1400
 	skinMaxTemp = 1400
 	emissiveConstant = 0.88
+//	CoLOffset = 0,0.05,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -56,19 +57,10 @@ PART
 
 	MODULE
 	{
-		name = MultiModeEngine
-		primaryEngineID = Monopropellant
-		secondaryEngineID = Jetfuel
-		carryOverThrottle = True
-		autoSwitchAvailable = False
-	}
-
-	MODULE
-	{
 		name = ModuleEnginesFX
 		engineID = Monopropellant
 		thrustVectorTransformName = thrustTransform
-		exhaustDamage = True
+		exhaustDamage = False
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 8
@@ -137,7 +129,7 @@ PART
 		name = ModuleEnginesFX
 		engineID = Jetfuel
 		thrustVectorTransformName = thrustTransform
-		exhaustDamage = True
+		exhaustDamage = False
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 8
@@ -201,22 +193,31 @@ PART
 
 	MODULE
 	{
+		name = MultiModeEngine
+		primaryEngineID = Monopropellant
+		secondaryEngineID = Jetfuel
+		carryOverThrottle = True
+		autoSwitchAvailable = False
+	}
+
+	MODULE
+	{
 		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 2
+		thrustProviderModuleIndex = 1
 		fxMax = 0.5
 		maxDistance = 2
 		falloff = 2
-		thrustTransformName = thrustTransform
+		thrustTransformName = thrustTransformFX
 	}
 	
 	MODULE
 	{
 		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 3
+		thrustProviderModuleIndex = 2
 		fxMax = 0.5
 		maxDistance = 2
 		falloff = 2
-		thrustTransformName = thrustTransform
+		thrustTransformName = thrustTransformFX
 	}
 
 	MODULE
@@ -616,7 +617,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_smokeTrail_light
-				transformName = thrustTransform
+				transformName = thrustTransformFX
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -632,7 +633,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = WildBlueIndustries/Buffalo/Parts/JetWing/jetWingFlame
-				transformName = thrustTransform
+				transformName = thrustTransformFX
 				emission = 0.0 0.0
 				emission = 0.16 0.0
 				emission = 0.3 0.5
@@ -676,7 +677,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_smokeTrail_light
-				transformName = thrustTransform
+				transformName = thrustTransformFX
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -692,7 +693,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = WildBlueIndustries/Buffalo/Parts/JetWing/JWLiquidFuelFlame
-				transformName = thrustTransform
+				transformName = thrustTransformFX
 				emission = 0.0 0.0
 				emission = 0.16 0.0
 				emission = 0.3 0.5
@@ -747,7 +748,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_exhaustSparks_flameout_2
-				transformName = thrustTransform
+				transformName = thrustTransformFX
 				oneShot = true
 			}
 			AUDIO
