--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
@@ -131,7 +131,7 @@ PATH_SCIENCE
 		criticalFail = 20
 		sciencePerCycle = 1.0
 		repairSkill = ScienceSkill
-		repairResource = RocketParts
+		repairResource = ResearchKits
 		repairAmount = 100
 		defaultExperiment = WBIEmptyExperiment
 
