MM_Contracts change
Adds Spyglass as cupola for stations for contract requirements

--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Contracts.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Contracts.cfg
@@ -129,5 +129,20 @@
 				ReputationMultiplier = 1.05 // The multiplier this request places on reputation in hard contracts
 			}
 		}
+		@CREW_REQUEST[#Part[cupola]]
+        	{
+           	 Part = WBI_Spyglass
+      		}	
+	}
+	@Station
+	{
+		@PART_REQUEST:HAS[#Part[cupola]]
+		{
+			Part = WBI_Spyglass
+		}
+        @CREW_REQUEST[#Part[cupola]]
+        {
+            Part = WBI_Spyglass
+        }
 	}
 }
