--- a/Extras/MCM/Parts/Stagecoach.cfg
+++ b/Extras/MCM/Parts/Stagecoach.cfg
@@ -35,7 +35,7 @@ PART
 	node_stack_front = 0, 0,-1.011, 0, 0, -1, 2
 
 	// --- editor parameters ---
-	TechRequired = SpaceExploration
+	TechRequired = spaceExploration
 	entryCost = 9000
 	cost = 1600
 	category = Payload
