--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
@@ -43,10 +43,12 @@
 
 @PART[WBI_LongPassengerCab]:NEEDS[SnacksUtils]
 {
-	//This is calibrated for 4 kerbals at 100% efficiency
-	//when they consume 1 snack per meal and 1 meal per day. For your custom recycler,
-	//Take into account the number of kerbals it should support along with the meals and snacks.
+	//This is calibrated for 4 kerbals at 100% efficiency when then consume
+	//1 snack per meal and 1 meal per day.
 	//In game, the player can adjust the efficiency of the recycler from 10% to 100%.
+	//Given the dynamic nature, the input/output ratio is ALWAYS set to 0.00004630,
+	//which gives a daily input/output of 1.00008 per day. The recycler will then adjust
+	//the input/output ratio based upon RecyclerCapacity and recycler efficiency.
 	MODULE
 	{
 		name = SoilRecycler
@@ -66,20 +68,20 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Soil
-			Ratio = 1
+			Ratio = 0.000034723
 			FlowMode = ALL_VESSEL
   		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 10
+			Ratio = 12
 		}
 
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Snacks
-			Ratio = 0.000555556
+			Ratio = 0.000034723
 			DumpExcess = false
 			FlowMode = ALL_VESSEL
 		}
@@ -95,10 +97,12 @@
 
 @PART[WBI_ShortPassengerCab]:NEEDS[SnacksUtils]
 {
-	//This is calibrated for 2 kerbals at 100% efficiency
-	//when they consume 1 snack per meal and 1 meal per day. For your custom recycler,
-	//Take into account the number of kerbals it should support along with the meals and snacks.
+	//This is calibrated for 4 kerbals at 100% efficiency when then consume
+	//1 snack per meal and 1 meal per day.
 	//In game, the player can adjust the efficiency of the recycler from 10% to 100%.
+	//Given the dynamic nature, the input/output ratio is ALWAYS set to 0.00004630,
+	//which gives a daily input/output of 1.00008 per day. The recycler will then adjust
+	//the input/output ratio based upon RecyclerCapacity and recycler efficiency.
 	MODULE
 	{
 		name = SoilRecycler
@@ -118,20 +122,20 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Soil
-			Ratio = 1
+			Ratio = 0.000034723
 			FlowMode = ALL_VESSEL
   		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 5
+			Ratio = 6
 		}
 
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Snacks
-			Ratio = 0.0002777778
+			Ratio = 0.000034723
 			DumpExcess = false
 			FlowMode = ALL_VESSEL
 		}
