--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -1,12 +1,58 @@
 //This MM patch configures Pathfinder's life support systems to use Snacks.
+@PATH_HABITATION[Ponderosa]:NEEDS[SnacksUtils]
+{
+	//1 snack per meal and 1 meal per day.
+	//In game, the player can adjust the efficiency of the recycler from 10% to 100%.
+	//Given the dynamic nature, the input/output ratio is ALWAYS set to 0.000034723,
+	//which gives a daily input/output of 1.00008 per day. The recycler will then adjust
+	//the input/output ratio based upon RecyclerCapacity and recycler efficiency.
+	MODULE
+	{
+		name = SoilRecycler
+		ConverterName = Soil Recycler
+		StartActionName = Start Soil Recycler
+		StopActionName = Stop Soil Recycler
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		UseSpecializationBonus = true
+		SpecialistEfficiencyFactor = 0.1
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1.0
+		RecyclerCapacity = 6
+	 
+		INPUT_RESOURCE
+		{
+			ResourceName = Soil
+			Ratio = 0.000034723
+			FlowMode = ALL_VESSEL
+  		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 18
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Snacks
+			Ratio = 0.000034723
+			DumpExcess = false
+			FlowMode = ALL_VESSEL
+		}
+	}
+}
+
 @PATH_HABITATION[Pigpen]:NEEDS[SnacksUtils]
 {
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Composter
-		StartActionName = Start Composter
-		StopActionName = Stop Composter
+		ConverterName = Haber Process (Makes Fertilizer)
+		StartActionName = Start Haber Process
+		StopActionName = Stop Haber Process
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
@@ -41,6 +87,12 @@
 		}
 	}
 
+	//This is calibrated for 4 kerbals at 100% efficiency when then consume
+	//1 snack per meal and 1 meal per day.
+	//In game, the player can adjust the efficiency of the recycler from 10% to 100%.
+	//Given the dynamic nature, the input/output ratio is ALWAYS set to 0.00004630,
+	//which gives a daily input/output of 1.00008 per day. The recycler will then adjust
+	//the input/output ratio based upon RecyclerCapacity and recycler efficiency.
 	MODULE
 	{
 		name = SoilRecycler
@@ -60,28 +112,20 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Soil
-			Ratio = 1
+			Ratio = 0.000034723
 			FlowMode = ALL_VESSEL
   		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 15
+			Ratio = 18
 		}
 
 		OUTPUT_RESOURCE
 		{
-			ResourceName = Water
-			Ratio = 0.000625
-			DumpExcess = false
-			FlowMode = ALL_VESSEL
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 0.000208333
+			ResourceName = Snacks
+			Ratio = 0.000034723
 			DumpExcess = false
 			FlowMode = ALL_VESSEL
 		}
