--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Workshop.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Workshop.cfg
@@ -56,6 +56,39 @@ PATH_HABITATION
 		}
 	}
 
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Equipment Recycler
+		StartActionName = Start Equipment Recycler
+		StopActionName = Stop Equipment Recycler
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Equipment
+			Ratio = 0.1
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 10
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = MaterialKits
+			Ratio = 0.25
+			DumpExcess = false
+		}
+	}
 	RESOURCE
 	{
 		name = ElectricCharge
