--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Clockworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Clockworks.cfg
@@ -58,6 +58,40 @@ PATH_INDUSTRY
 		}
 	}
 
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Equipment Recycler
+		StartActionName = Start Equipment Recycler
+		StopActionName = Stop Equipment Recycler
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Equipment
+			Ratio = 1
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 10
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = MaterialKits
+			Ratio = 2.5
+			DumpExcess = false
+		}
+	}
+
 	RESOURCE
 	{
 		name = ElectricCharge
