--- a/GameData/WildBlueIndustries/Buffalo/Parts/Electrical/GTG125.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Electrical/GTG125.cfg
@@ -103,6 +103,18 @@ PART
 			Ratio = 5.0
 			DumpExcess = true
 		}
+
+		showUpgradesInModuleInfo = true
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = OspreyPowerUpgrade
+				description__ = Max Power Output: 150 EC/sec.
+				techRequired__ = heavyAerodynamics
+				bonusEfficiency = 1.25
+			}
+		}
 	}
 
 	MODULE
