--- a/GameData/WildBlueIndustries/Buffalo/Parts/Engine/WB22TiltRotor.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Engine/WB22TiltRotor.cfg
@@ -61,15 +61,13 @@ PART
 		exhaustDamage = False
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 120
+		maxThrust = 125
 		heatProduction = 0
 		useEngineResponseTime = True
 		engineAccelerationSpeed = 0.5
 		engineDecelerationSpeed = 0.5
 		fxOffset = 0, 0, 0.74
 		flameoutEffectName = flameout
-		//In hover mode, the power effect gets choppy due to the way we have to set the throttle.
-//		powerEffectName = running_thrust
 		engageEffectName = engage
 		disengageEffectName = disengage
 		spoolEffectName = running_turbine
@@ -116,6 +114,17 @@ PART
 			key = 0.072 0.092 1.339822 1.339822
 			key = 0.337 0.4 0.8976688 0.8976688
 			key = 1 1 0.9127604 0
+		}
+		showUpgradesInModuleInfo = true
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = OspreyThrustUpgrade
+				description__ = Max Thrust: 150 kN.
+				techRequired__ = heavyAerodynamics
+				maxThrust = 150
+			}
 		}
 	}
 
