--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
@@ -30,7 +30,7 @@ PART
 	node_stack_bottom = 0.0, -0.94, 0.0, 0.0, -1.0, 0.0, 2
 
 	// --- editor parameters ---
-	TechRequired = spaceExploration
+	TechRequired = advExploration
 	entryCost = 9000
 	cost = 1600
 	category = Payload
